[gd_scene load_steps=4 format=2]

[ext_resource path="res://food/vegetals/parasite_algae/parasite algae.png" type="Texture" id=1]
[ext_resource path="res://food/vegetals/parasite_algae/parasite_algae.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.4392

[node name="parasite_algae" type="StaticBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, -42 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -10 )
shape = SubResource( 1 )

[node name="hunger" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="reproduction" type="Timer" parent="."]
wait_time = 120.0
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -34.0
margin_top = -85.0
margin_right = 41.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="hunger" to="." method="_on_hunger_timeout"]
[connection signal="timeout" from="reproduction" to="." method="_on_reproduction_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
